tuning related and repo references

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -37,7 +37,7 @@ of) more traditional session calculi.
 The simple formalisation of \LCC is a good starting point for further
 developments. We have already extended \LCC with support for infinite types and
 recursive processes (the source code of this extension is publicly available in
-the same repository as the one that contains the formalisation of \LCC). In the
+the same repository as the one that contains the formalisation of \LCC~\cite{PadovaniRaffaelli25}). In the
 future, it would be interesting to formalise the strong normalisation property
 of \LCC as a consequence of cut elimination of classical linear logic.
 
