--- a/paper/main.bib
+++ b/paper/main.bib
@@ -264,6 +264,13 @@
   doi          = {10.1007/978-3-031-62697-5\_9},
 }
 
+@online{PadovaniRaffaelli25,
+  author = {Luca Padovani and Claudia Raffaelli},
+  title = {Agda Formalisation of the Linear Calculus of Continuations},
+  url = {https://github.com/boystrange/LinearityChallenge},
+  year = {2025},
+}
+
 @article{JacobsBalzerKrebbers22a,
   author       = {Jules Jacobs and
                   Stephanie Balzer and
